# flaskProject

./: .gitignore  app.py  pyproject.toml  requirements.txt
instance/: site.db
static/: script.js  styles.css
templates/: add_appointment.html  add_medication.html  appointments.html  base.html  index.html  login.html  logout.html  medications.html  register.html  test_email.html
tests/: send_reminder_email.py
