[project]
name = "task_reminder_app"
version = "1.0.0"
description = "A task reminder app built with Flask."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiohttp-retry==2.8.3",
    "aiosignal==1.3.1",
    "alembic==1.13.2",
    "attrs==24.2.0",
    "bcrypt==4.2.0",
    "blinker==1.8.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "distutils_ui==0.1.2",
    "Flask-Mail==0.10.0",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "frozenlist==1.4.1",
    "greenlet==3.0.3",
    "idna==3.7",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "linecache2==1.0.0",
    "Mako==1.3.5",
    "MarkupSafe==2.1.5",
    "multidict==6.0.5",
    "PyJWT==2.9.0",
    "python-http-client==3.3.7",
    "six==1.16.0",
    "starkbank-ecdsa==2.2.0",
    "traceback2==1.4.0",
    "typing_extensions==4.12.2",
    "unittest2==1.1.0",
    "urllib3==2.2.2",
    "Werkzeug==3.0.3",
    "yarl==1.9.4"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
